HUE-7949 [dashboard] Fix hidden x-overflow problems and autofit widgets over time
(cherry picked from commit 847b56075df62b0d5896b182738e732b214d04bf)

--- a/desktop/core/src/desktop/static/desktop/less/components/hue-gridster.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-gridster.less
@@ -70,6 +70,10 @@
     .hue-ease-transition(opacity);
   }
 
+  .gs-resize-handle-x {
+    right: 0;
+  }
+
   .empty-gridster-widget {
     height: 215px;
   }
